--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,3 +1,104 @@
-.picture-product{
-    width: 500px;
+/* masthead */
+.masthead {
+  position: relative;
+  overflow: hidden;
+  padding-top: calc(112px + 72px);
+  padding-bottom: 112px;
+  background-color: $purple;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
+  @media (min-width: 992px) {
+    padding-top: calc(160px + 55px);
+    padding-bottom: 160px;
+  }
+  .masthead-content {
+    z-index: 1;
+    position: relative;
+    .container {
+      .title {
+        font-size: 85px;
+        font-weight: 500;
+        @media (max-width: 576px) {
+          font-size: 55px;
+        }
+      }
+      .sub-title {
+        font-size: 45px;
+        font-weight: 400;
+        @media (max-width: 576px) {
+          font-size: 30px;
+        }
+      }
+    }  
+  }
+  .scroll {
+    transform: translateY(120px);
+    @media (max-width: 992px) {
+      transform: translateY(80px);
+    }
+    i {
+      font-size: 35px;
+      color: #fff;
+      @media (max-width: 576px) {
+        font-size: 30px;
+      }
+    }
+  }
+}
+
+/* container teddies */
+#container-teddies {
+  .product {
+    display: flex;
+    @media (max-width: 992px) {
+      margin-bottom: 120px;
+    }
+    @media (max-width: 576px) {
+      margin-bottom: 80px;
+    }
+    &:nth-child(1) {
+      margin-top: 50px;
+      @media (max-width: 576px) {
+        margin-top: 25px;
+      }
+    }
+    &:nth-child(2n) {
+    flex-direction: row-reverse;
+    }
+  }
+  .name-product {
+    font-size: 40px;
+    cursor: pointer;
+    @media (max-width: 576px) {
+      font-size: 30px;
+    }
+    &::after {
+      content: "";
+      display: block;
+      border-bottom: 4px solid #CD7D4E;
+      width: 65px;
+      height: 5px;
+      @media (max-width: 576px) {
+        width: 40px;
+      }
+    }
+  }
+  .description-product {
+    margin: 30px 0 10px 0;
+    @media (max-width: 576px) {
+      margin: 20px 0 5px 0;
+    }
+  }
+  .price-product {
+    font-size: 22px;
+    font-weight: 500;
+    @media (max-width: 576px) {
+      font-size: 20px;
+    }
+  }
+  .img-fluid {
+    cursor: pointer;
+  }
 }
