--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -58,20 +58,23 @@ p {
   font-size: 35px;
   color: #B67090;
 }
-.navbar-custom .navbar-nav .nav-item {
+.navbar-custom .navbar-collapse {
+  flex-grow: 0;
+}
+.navbar-custom .navbar-collapse .navbar-nav .nav-item {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.navbar-custom .navbar-nav .nav-item .nav-link {
+.navbar-custom .navbar-collapse .navbar-nav .nav-item .nav-link {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 1.6px;
-  color: #000;
+  color: #000000;
 }
-.navbar-custom .navbar-nav .nav-item .nav-link:hover {
+.navbar-custom .navbar-collapse .navbar-nav .nav-item .nav-link:hover {
   color: #B67090;
 }
 
@@ -135,7 +138,7 @@ p {
 }
 .masthead .scroll i {
   font-size: 35px;
-  color: #fff;
+  color: #ffffff;
 }
 @media (max-width: 576px) {
   .masthead .scroll i {
