--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 .navbar-custom {
     padding-top: 16px;
     padding-bottom: 16px;
-    background-color: #F3E9F1;
+    background-color: $pink;
     .navbar-brand {
       font-family: $font_1;
       text-transform: uppercase;
@@ -25,25 +25,28 @@
       }
       i {
         font-size: 35px;
-        color: #B67090;
+        color: $purple;
       }
     }
-    .navbar-nav {
-      .nav-item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        .nav-link {
-          font-family: $font_2;
-          text-transform: uppercase;
-          font-size: 14px;
-          font-weight: 700;
-          letter-spacing: 1.6px;
-          color: #000;
-          &:hover {
-            color: #B67090;
+    .navbar-collapse {
+      flex-grow: 0;
+      .navbar-nav {
+        .nav-item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .nav-link {
+            font-family: $font_2;
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: 700;
+            letter-spacing: 1.6px;
+            color: $black;
+            &:hover {
+              color: $purple;
+            }
           }
         }
       }
-    }
+    } 
   }  
