--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,53 +1,3 @@
-/* masthead */
-.masthead {
-  position: relative;
-  overflow: hidden;
-  padding-top: calc(112px + 72px);
-  padding-bottom: 112px;
-  background-color: $purple;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: scroll;
-  background-size: cover;
-  @media (min-width: 992px) {
-    padding-top: calc(160px + 55px);
-    padding-bottom: 160px;
-  }
-  .masthead-content {
-    z-index: 1;
-    position: relative;
-    .container {
-      .title {
-        font-size: 85px;
-        font-weight: 500;
-        @media (max-width: 576px) {
-          font-size: 55px;
-        }
-      }
-      .sub-title {
-        font-size: 45px;
-        font-weight: 400;
-        @media (max-width: 576px) {
-          font-size: 30px;
-        }
-      }
-    }  
-  }
-  .scroll {
-    transform: translateY(120px);
-    @media (max-width: 992px) {
-      transform: translateY(80px);
-    }
-    i {
-      font-size: 35px;
-      color: $white;
-      @media (max-width: 576px) {
-        font-size: 30px;
-      }
-    }
-  }
-}
-
 /* container teddies */
 #container-teddies {
   .product {
@@ -69,7 +19,7 @@
     }
   }
   .name-product {
-    font-size: 40px;
+    font-size: 36px;
     cursor: pointer;
     @media (max-width: 576px) {
       font-size: 30px;
@@ -77,7 +27,7 @@
     &::after {
       content: "";
       display: block;
-      border-bottom: 4px solid $orange;
+      border-bottom: 3px solid $purple;
       width: 65px;
       height: 5px;
       @media (max-width: 576px) {
