--- a/frontend/sass/utils/_variables.scss
+++ b/frontend/sass/utils/_variables.scss
@@ -1,6 +1,7 @@
 /* colors */
 $white: #ffffff;
+$lightgray: #e1e0e0;
+$darkgrey: #999999;
 $black: #000000;
 $pink: #F3E9F1;
-$orange: #CD7D4E;
 $purple: #B67090;
