--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -22,5 +22,8 @@
 /* produit */
 @import "./pages/produit";
 
+/* commande */
+@import "./pages/commande";
+
 /* keyframes */
 @import "./utils/keyframes";
