--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -42,8 +42,10 @@
     }
   }
   .price-product {
+    font-family: $font_2;
     font-size: 22px;
     font-weight: 500;
+    margin: 0 20px 0 0;
     @media (max-width: 576px) {
       font-size: 20px;
     }
