--- a/frontend/sass/utils/_variables.scss
+++ b/frontend/sass/utils/_variables.scss
@@ -1,7 +1,6 @@
 /* colors */
 $white: #ffffff;
-$lightgray: #e1e0e0;
-$darkgrey: #999999;
 $black: #000000;
+$lightgrey: #e1e0e0;
 $pink: #F3E9F1;
 $purple: #B67090;
