--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -10,7 +10,6 @@ h3 {
 
 h2 {
   font-family: "Raleway", sans-serif;
-  font-weight: 500;
 }
 
 p {
@@ -34,66 +33,75 @@ p {
   color: #ffffff;
 }
 
+/* structure */
 /* header */
-/* masthead */
-.masthead {
-  position: relative;
-  overflow: hidden;
-  padding-top: calc(112px + 72px);
-  padding-bottom: 112px;
-  background-color: #B67090;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: scroll;
-  background-size: cover;
-}
-@media (min-width: 992px) {
-  .masthead {
-    padding-top: calc(160px + 55px);
-    padding-bottom: 160px;
-  }
-}
-.masthead .masthead-content {
-  z-index: 1;
-  position: relative;
-}
-.masthead .masthead-content .container .title {
-  font-size: 75px;
+.title-page {
   font-weight: 500;
+  font-size: 75px;
 }
 @media (max-width: 576px) {
-  .masthead .masthead-content .container .title {
+  .title-page {
     font-size: 50px;
   }
 }
-.masthead .masthead-content .container .sub-title {
-  font-size: 40px;
+
+.slogan {
+  font-family: "Raleway", sans-serif;
+  font-size: 36px;
   font-weight: 400;
 }
 @media (max-width: 576px) {
-  .masthead .masthead-content .container .sub-title {
-    font-size: 30px;
+  .slogan {
+    font-size: 24px;
   }
 }
-.masthead .scroll {
-  transform: translateY(120px);
-}
-@media (max-width: 992px) {
-  .masthead .scroll {
-    transform: translateY(80px);
-  }
-}
-.masthead .scroll i {
-  font-size: 35px;
-  color: #ffffff;
+
+/* product */
+.name-product {
+  font-family: "Gloria Hallelujah", cursive;
+  font-size: 34px;
 }
 @media (max-width: 576px) {
-  .masthead .scroll i {
-    font-size: 30px;
+  .name-product {
+    font-size: 28px;
+  }
+}
+.name-product::after {
+  content: "";
+  display: block;
+  border-bottom: 3px solid #B67090;
+  width: 65px;
+  height: 5px;
+}
+@media (max-width: 576px) {
+  .name-product::after {
+    width: 40px;
+  }
+}
+
+.description-product {
+  margin: 30px 0 10px 0;
+}
+@media (max-width: 576px) {
+  .description-product {
+    margin: 20px 0 5px 0;
+  }
+}
+
+.price-product {
+  font-family: "Raleway", sans-serif;
+  font-size: 22px;
+  font-weight: 500;
+  margin: 0 20px 0 0;
+}
+@media (max-width: 576px) {
+  .price-product {
+    font-size: 20px;
   }
 }
 
 /* header */
+/* navigation */
 .navbar-custom {
   padding-top: 16px;
   padding-bottom: 16px;
@@ -153,6 +161,46 @@ p {
   color: #B67090;
 }
 
+/* masthead */
+.masthead {
+  position: relative;
+  overflow: hidden;
+  padding-top: calc(112px + 72px);
+  padding-bottom: 112px;
+  background-color: #B67090;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
+}
+@media (min-width: 992px) {
+  .masthead {
+    padding-top: calc(160px + 55px);
+    padding-bottom: 160px;
+  }
+}
+.masthead .masthead-content {
+  z-index: 1;
+  position: relative;
+}
+.masthead .scroll {
+  transform: translateY(120px);
+}
+@media (max-width: 992px) {
+  .masthead .scroll {
+    transform: translateY(80px);
+  }
+}
+.masthead .scroll i {
+  font-size: 35px;
+  color: #ffffff;
+}
+@media (max-width: 576px) {
+  .masthead .scroll i {
+    font-size: 30px;
+  }
+}
+
 /* footer */
 .container-copy {
   background-color: #F3E9F1;
@@ -188,127 +236,11 @@ p {
 #container-teddies .product:nth-child(2n) {
   flex-direction: row-reverse;
 }
-#container-teddies .name-product {
-  font-size: 36px;
+#container-teddies .product .name-product {
   cursor: pointer;
-}
-@media (max-width: 576px) {
-  #container-teddies .name-product {
-    font-size: 30px;
-  }
-}
-#container-teddies .name-product::after {
-  content: "";
-  display: block;
-  border-bottom: 3px solid #B67090;
-  width: 65px;
-  height: 5px;
-}
-@media (max-width: 576px) {
-  #container-teddies .name-product::after {
-    width: 40px;
-  }
-}
-#container-teddies .description-product {
-  margin: 30px 0 10px 0;
-}
-@media (max-width: 576px) {
-  #container-teddies .description-product {
-    margin: 20px 0 5px 0;
-  }
-}
-#container-teddies .price-product {
-  font-family: "Raleway", sans-serif;
-  font-size: 22px;
-  font-weight: 500;
-  margin: 0 20px 0 0;
-}
-@media (max-width: 576px) {
-  #container-teddies .price-product {
-    font-size: 20px;
-  }
 }
 #container-teddies .img-fluid {
   cursor: pointer;
-}
-
-/* panier */
-/* Product panier */
-.container-product-panier {
-  margin-top: 70px;
-}
-@media (max-width: 576px) {
-  .container-product-panier {
-    margin-top: 30px;
-  }
-}
-.container-product-panier .container-shop-table {
-  font-size: 25px;
-}
-@media (max-width: 576px) {
-  .container-product-panier .container-shop-table {
-    font-size: 20px;
-  }
-}
-.container-product-panier #container-total {
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 22px;
-}
-@media (max-width: 576px) {
-  .container-product-panier #container-total {
-    font-size: 18px;
-  }
-}
-.container-product-panier #container-total .totalPrice {
-  margin-right: 20px;
-}
-.container-product-panier #container-product-panier p {
-  color: #999999;
-  font-size: 22px;
-}
-@media (max-width: 576px) {
-  .container-product-panier #container-product-panier p {
-    font-size: 18px;
-  }
-}
-.container-product-panier #container-product-panier .container-empty-panier {
-  font-family: "Raleway", sans-serif;
-  color: #999999;
-}
-
-/* form */
-.order-form {
-  margin: 70px 0 90px;
-}
-@media (max-width: 576px) {
-  .order-form {
-    margin: 0 0 40px 0;
-  }
-}
-.order-form .title-form {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-.order-form .subtitle-form {
-  color: #999999;
-}
-.order-form .label {
-  text-transform: uppercase;
-  color: #999999;
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-}
-.order-form input, .order-form textarea {
-  height: 50px;
-  width: 250px;
-  font-family: "Raleway", sans-serif;
-  color: #999999;
-  border: 1px solid #e1e0e0;
-}
-.order-form #address {
-  padding-top: 13px;
 }
 
 /* produit */
@@ -347,22 +279,6 @@ p {
     transform: none;
   }
 }
-#container-product .page-product .product .title {
-  font-family: "Gloria Hallelujah", cursive;
-  font-size: 36px;
-}
-#container-product .page-product .product .title::after {
-  content: "";
-  display: block;
-  border-bottom: 3px solid #B67090;
-  width: 65px;
-  height: 5px;
-}
-@media (max-width: 576px) {
-  #container-product .page-product .product .title::after {
-    width: 40px;
-  }
-}
 #container-product .page-product .product .description {
   margin-top: 30px;
 }
@@ -370,13 +286,7 @@ p {
   display: flex;
   align-items: center;
 }
-#container-product .page-product .product .wrapper-colors-price .price-product {
-  font-family: "Raleway", sans-serif;
-  font-size: 22px;
-  font-weight: 500;
-  margin: 0 20px 0 0;
-}
-#container-product .page-product .product .wrapper-colors-price .colors #color-product {
+#container-product .page-product .product .wrapper-colors-price #color-product {
   height: 33px;
   cursor: pointer;
   font-family: "Raleway", sans-serif;
@@ -406,7 +316,6 @@ p {
 }
 .modal-content #modal-body {
   font-family: "Raleway", sans-serif;
-  color: #999999;
   padding: 15px;
 }
 @media (max-width: 576px) {
@@ -439,30 +348,115 @@ p {
   color: #B67090;
 }
 
+/* panier */
+/* Product panier */
+.container-product-panier {
+  margin-top: 70px;
+}
+@media (max-width: 576px) {
+  .container-product-panier {
+    margin-top: 30px;
+  }
+}
+.container-product-panier .product,
+.container-product-panier .color,
+.container-product-panier .price {
+  font-size: 36px;
+}
+@media (max-width: 576px) {
+  .container-product-panier .product,
+.container-product-panier .color,
+.container-product-panier .price {
+    font-size: 24px;
+  }
+}
+.container-product-panier #container-total {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+}
+@media (max-width: 576px) {
+  .container-product-panier #container-total {
+    font-size: 18px;
+  }
+}
+.container-product-panier #container-total .totalPrice {
+  margin-right: 20px;
+}
+.container-product-panier #container-product-panier .product-name,
+.container-product-panier #container-product-panier .product-color,
+.container-product-panier #container-product-panier .product-price,
+.container-product-panier #container-product-panier .empty-panier {
+  font-family: "Raleway", sans-serif;
+  font-size: 22px;
+}
+@media (max-width: 576px) {
+  .container-product-panier #container-product-panier .product-name,
+.container-product-panier #container-product-panier .product-color,
+.container-product-panier #container-product-panier .product-price,
+.container-product-panier #container-product-panier .empty-panier {
+    font-size: 18px;
+  }
+}
+
+/* form */
+.order-form {
+  margin: 70px 0 90px;
+}
+@media (max-width: 576px) {
+  .order-form {
+    margin: 0 0 40px 0;
+  }
+}
+.order-form .title-form {
+  font-weight: 500;
+  font-size: 36px;
+}
+@media (max-width: 576px) {
+  .order-form .title-form {
+    font-size: 24px;
+  }
+}
+.order-form .label {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+}
+.order-form input, .order-form textarea {
+  height: 50px;
+  width: 250px;
+  font-family: "Raleway", sans-serif;
+  border: 1px solid #e1e0e0;
+}
+.order-form #address {
+  padding-top: 13px;
+}
+
 /* commande */
 /* Container order */
 .container-order {
-  margin-bottom: 800px;
+  margin: 70px 0 800px 0;
 }
-.container-order p {
-  color: #999999;
+@media (max-width: 576px) {
+  .container-order {
+    margin-top: 30px;
+  }
 }
 .container-order .orderId,
 .container-order .totalPrice {
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 24px;
-  text-transform: uppercase;
+  font-size: 36px;
 }
-
-/* keyframes */
-/* popup animation */
-@keyframes popup {
-  from {
-    opacity: 0;
+@media (max-width: 576px) {
+  .container-order .orderId,
+.container-order .totalPrice {
+    font-size: 24px;
   }
-  to {
-    opacity: 1;
+}
+.container-order p {
+  font-size: 24px;
+}
+@media (max-width: 576px) {
+  .container-order p {
+    font-size: 18px;
   }
 }
 
