--- a/frontend/sass/pages/_commande.scss
+++ b/frontend/sass/pages/_commande.scss
@@ -1,14 +1,20 @@
 /* Container order */
 .container-order {
-    margin-bottom: 800px;
-    p {
-        color: $darkgrey;
+    margin: 70px 0 800px 0;
+    @media (max-width: 576px) {
+        margin-top: 30px;
     }
     .orderId,
     .totalPrice {
-        font-family: $font_2;
-        font-weight: 500;
+        font-size: 36px;
+        @media (max-width: 576px) {
+            font-size: 24px;
+        }
+    }
+    p {
         font-size: 24px;
-        text-transform: uppercase;
+        @media (max-width: 576px) {
+            font-size: 18px;
+        }
     }
 }
