--- a/frontend/sass/pages/_commande.scss
+++ b/frontend/sass/pages/_commande.scss
@@ -6,13 +6,18 @@
     }
     .orderId,
     .totalPrice {
-        font-size: 36px;
+        font-size: 34px;
+        margin-bottom: 30px;
         @media (max-width: 576px) {
-            font-size: 24px;
+            font-size: 28px;
         }
     }
+    #orderId,
+    #totalPrice {
+        margin-top: 12px;
+    }
     p {
-        font-size: 24px;
+        font-size: 20px;
         @media (max-width: 576px) {
             font-size: 18px;
         }
