--- a/frontend/sass/pages/_panier.scss
+++ b/frontend/sass/pages/_panier.scss
@@ -66,6 +66,12 @@
     .label {
         font-family: $font_2;
         font-weight: 500;
+        margin-right: 15px;
+    }
+    .emptyField {
+        font-family: $font_2;
+        font-weight: 500;
+        color: $purple;
     }
     input, textarea {
         height: 50px;
