--- a/frontend/sass/pages/_commande.scss
+++ b/frontend/sass/pages/_commande.scss
@@ -6,6 +6,7 @@
     }
     .orderId,
     .totalPrice {
+        font-family: $font_2;
         font-size: 34px;
         margin-bottom: 30px;
         @media (max-width: 576px) {
