--- a/frontend/sass/pages/_produit.scss
+++ b/frontend/sass/pages/_produit.scss
@@ -63,6 +63,9 @@
     padding: 15px;
   }
   .modal-footer {
+    a {
+      text-decoration: none;
+    }
     & > * {
       @media (max-width: 576px) {
         margin: 0;
